# dapodik

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LISENSI  README-EN.md  README-dev.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: pytest.yml  python-publish.yml
dapodik/: __init__.py  __main__.py  attrs.py  auth.py  base.py  config.py  constants.py  dapodik.py  enums.py  exception.py  main.py  message.py  response.py  result.py  version.py
dapodik/auth/: __init__.py  auth.py  base.py  base_auth.py  exception.py  pengguna.py  role_peran.py
dapodik/base/: __init__.py  attr.py  attrs.py  base.py  base_dapodik.py  base_prop.py  config.py  dapodik.py  dapodik_object.py  defaults.py  message.py  message_data.py  prop.py  rest.py  results.py  types.py  utils.py
dapodik/base/attrs/: __init__.py  fields_converter.py  filter.py  metadata.py  serializer.py
dapodik/beranda/: __init__.py  base.py  info_survey_ptm.py  kerusakan_bangunan.py  panel_dashboard.py
dapodik/cli/: __init__.py  import_pd_dari_excel.py
dapodik/customrest/: __init__.py  base.py  base_customrest.py  mata_pelajaran_kurikulum.py  sync_log.py  update_panel_dashboard.py  wilayah.py
dapodik/gtk/: __init__.py  base.py  enums.py  ptk.py  ptk_terdaftar.py
dapodik/jadwal/: base_jadwal.py  jadwal.py
dapodik/peserta_didik/: __init__.py  base.py  base_peserta_didik.py  create_peserta_didik.py  peserta_didik.py  peserta_didik_baru.py  peserta_didik_longitudinal.py  registrasi_peserta_didik.py
dapodik/ptk/: __init__.py  base_ptk.py  ptk.py  ptk_terdaftar.py
dapodik/rest/: __init__.py  agama.py  akreditasi.py  akses_internet.py  alasan_layak_pip.py  alat_transportasi.py  bank.py  base.py  base_rest.py  bentuk_lembaga.py  biblio.py  child_delete.py  fasilitas_layanan.py  gmd.py  jadwal_paud.py  jenis_cita.py  jenis_gugus.py  jenis_hapus_buku.py  jenis_hobby.py  jenis_keluar.py  jenis_lk.py  jenis_pendaftaran.py  jenis_prasarana.py  jenis_ptk.py  jenis_rombel.py  jenis_sarana.py  jenis_tinggal.py  jenjang_pendidikan.py  jurusan.py  kategori_tk.py  keahlian_laboratorium.py  kebutuhan_khusus.py  klasifikasi_lembaga.py  kurikulum.py  lembaga_pengangkat.py  mata_pelajaran.py  mst_wilayah.py  pangkat_golongan.py  pekerjaan.py  pengguna.py  (+13 more)
dapodik/rombongan_belajar/: __init__.py  anggota_rombel.py  base.py  base_rombongan_belajar.py  pembelajaran.py  rombel_portal.py  rombongan_belajar.py
dapodik/sarpras/: __init__.py  alat.py  alat_dari_blockgrant.py  alat_longitudinal.py  angkutan.py  angkutan_dari_blockgrant.py  bangunan.py  bangunan_dari_blockgrant.py  bangunan_longitudinal.py  base.py  base_sarpras.py  buku.py  buku_longitudinal.py  ruang.py  ruang_longitudinal.py  tanah.py  tanah_dari_blockgrant.py  tanah_longitudinal.py
dapodik/sekolah/: __init__.py  akreditasi.py  akreditasi_sp.py  base.py  base_sekolah.py  blockgrant.py  jurusan_sp.py  kepanitiaan.py  program_inklusi.py  sanitasi.py  sekolah.py  sekolah_longitudinal.py  sekolah_paud.py  semester.py  yayasan.py
dapodik/tools/backup/: __init__.py  backup_pd.py  base.py  utils.py
dapodik/utils/: __init__.py  decorator.py  get_subtypes.py  helper.py  helpers.py  parser.py
dapodik/validasi/: __init__.py  base.py  validasi.py
docs/: index.html
tests/: conftest.py  test_auth.py  test_base.py  test_customrest.py  test_dapodik.py  test_dapodik_response.py  test_enums.py  test_exception.py  test_gtk.py  test_main.py  test_message.py  test_peserta_didik.py  test_response.py  test_rest.py  test_result.py  test_rombongan_belajar.py  test_sarpras.py  test_sekolah.py  test_validasi.py  test_version.py
tests/local_tests/: conftest.py
tests/local_tests/sekolah_tests/: sekolah_test.py
tests/test_local/: conftest.py  test_rests.py  test_results.py  test_sarpras.py  test_validasi.py
tests/test_local/peserta_didik_tests/: test_peserta_didik.py
tests/test_local/rombongan_belajar_tests/: test_rombongan_belajar.py
tests/test_local/sekolah_tests/: test_sekolah.py
tests/test_utils/: test_helper.py  test_parser.py
