[tool.poetry]
name = "dapodik"
version = "0.9.0"
description = "SDK python untuk aplikasi dapodik."
authors = ["hexatester <habibrohman@protonmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://dapodix.github.io/dapodik"
repository = "https://github.com/hexatester/dapodik"
documentation = "https://github.com/dapodix/dapodik/wiki"
include = [
    "LICENSE",
    "LISENSI",
    "README.md",
    "README-EN.md",
]
keywords = [
    "dapodik",
    "kemdikbud",
    "python-module",
    "python-sdk",
    "python-wrapper"
]
classifiers=[
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.6.1"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
attrs = "^20.3.0"
typing-inspect = "^0.6.0"
cachetools = "^4.2.0"
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
mypy = "^0.782"
pre-commit = "^2.9.3"
pytest-cov = "^2.10.1"
black = "^20.8b1"
python-dotenv = "^0.15.0"

[tool.poetry.scripts]
dapodik = "dapodik.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
