[tool.poetry]
name = "dapodik"
version = "0.16.0"
description = "SDK python untuk aplikasi dapodik."
authors = ["hexatester <habibrohman@protonmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://dapodix.github.io/dapodik"
repository = "https://github.com/hexatester/dapodik"
documentation = "https://github.com/dapodix/dapodik/wiki"
include = [
    "LICENSE",
    "LISENSI",
    "README.md",
    "README-EN.md",
]
keywords = [
    "dapodik",
    "kemdikbud",
    "python-module",
    "python-sdk",
    "python-wrapper"
]
classifiers=[
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
attrs = "^20.3.0"
cattrs = "^1.4.0"
cachetools = "^4.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
mypy = "^0.910"
pre-commit = "^2.14.0"
pytest-cov = "^2.10.1"
black = "^21.7b0"
python-dotenv = "^0.15.0"
types-attrs = "^19.1.0"
types-cachetools = "^0.1.9"
types-requests = "^2.25.2"

[tool.poetry.scripts]
dapodik = "dapodik.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
